Version 0.8.1
=============
* DELETE is now undefined in Key.hpp if present. It should hopefully
  take care of some problems with windows.h defining delete which
  sometimes breaks Key.hpp.
* Soname support has been fixed. The correct version number should
  now be used in the produced binaries.
	
Version 0.8.0
=============
* Widget::showPart has been added to be used when a specific
  part of a widget should be visible. An example is when a text
  area wants a specific text part to be visible in a scroll area.
  This function uses BasicContainer::showWidgetPart.
* ListBox::setWrappingKeyboardSelection and
  ListBox::isWrappingKeyboardSelection have been renamed to
  ListBox::setWrappingEnabled and ListBox::isWrappingEnabled.
* Rectangle::intersect has been renamed to Rectangle::isIntersecting.
* Widget::hasModalFocus and Widget::hasModalMouseInputFocus has been
  renamed to Widget::isModalFocused and Widget::isModalMouseInputFocused.
* Widget::generateAction has been renamed to
  Widget::distributeActionEvent.
* All the examples have been improved. Examples have been added for
  HGE, OpenGL with SDL and for OpenGL with Allegro.
* Widget::drawBorder, Widget::getBorderSize and Widget::setBorderSize
  have been renamed to Widget::drawFrame, Widget::getFrameSize and
  Widget::setFrameSize.
* The alignment enum in Graphics, the orientation enum in Slider and
  the scroll policy enum in ScrollArea are no longer anonymous enums.
* RadioButton::setMarked and RadioButton::isMarked have been
  renamed to RadioButton::setSelected and RadioButton::isSelected.
* CheckBox::setMarked, CheckBox::isMarked and CheckBox::toggle have been
  renamed to CheckBox::setSelected, CheckBox::isSelected and
  CheckBox::toggleSelected.
* An image button widget, a button capable of displaying an image,
  has been added.
* A widget listener has been added used to listen for resized events,
  hidden events, shown events and moved events from a widget.