@@ -307,7 +307,23 @@ namespace gcn
          */
         int getDownButtonScrollAmount() const;
 
+        /**
+         * Sets the scroll area to be opaque, that is sets the scoll area
+         * to display its background.
+         *
+         * @param opaque True if the scoll area should be opaque, false otherwise.
+         */
+        void setOpaque(bool opaque);
 
+        /**
+         * Checks if the scroll area is opaque, that is if the scroll area
+         * displays its background.
+         *
+         * @return True if the scroll area is opaque, false otherwise.
+         */
+        bool isOpaque() const;
+        
+        
         // Inherited from BasicContainer
 
         virtual void showWidgetPart(Widget* widget, Rectangle area);
@@ -562,6 +578,12 @@ namespace gcn
          * Holds the vertical markers drag offset.
          */
         int mVerticalMarkerDragOffset;
+
+        /**
+         * True if the scroll area should be opaque (that is
+         * display its background), false otherwise.
+         */
+        bool mOpaque;
     };
 }
 
