@@ -69,6 +69,7 @@ namespace gcn
         mRightButtonScrollAmount = 10;
         mIsVerticalMarkerDragged = false;
         mIsHorizontalMarkerDragged =false;
+        mOpaque = true;
 
         addMouseListener(this);
     }
@@ -90,7 +91,8 @@ namespace gcn
         mRightButtonScrollAmount = 10;
         mIsVerticalMarkerDragged = false;
         mIsHorizontalMarkerDragged =false;
-
+        mOpaque = true;
+        
         setContent(content);
         addMouseListener(this);
     }
@@ -114,7 +116,8 @@ namespace gcn
         mRightButtonScrollAmount = 10;
         mIsVerticalMarkerDragged = false;
         mIsHorizontalMarkerDragged =false;
-
+        mOpaque = true;
+        
         setContent(content);
         addMouseListener(this);
     }
@@ -487,8 +490,11 @@ namespace gcn
 
     void ScrollArea::drawBackground(Graphics *graphics)
     {
-        graphics->setColor(getBackgroundColor());
-        graphics->fillRectangle(getChildrenArea());
+        if (isOpaque())
+        {
+            graphics->setColor(getBackgroundColor());
+            graphics->fillRectangle(getChildrenArea());
+        }
     }
 
     void ScrollArea::drawUpButton(Graphics* graphics)
@@ -1229,6 +1235,17 @@ namespace gcn
     int ScrollArea::getDownButtonScrollAmount() const
     {
         return mDownButtonScrollAmount;
+    }
+
+    void ScrollArea::setOpaque(bool opaque)
+    {
+        mOpaque = opaque;
+    }
+
+    
+    bool ScrollArea::isOpaque() const
+    {
+        return mOpaque;
     }
 }
 
